--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,10 @@ server:
   image: mcdermottsolutions/billtracker-flask:latest
   environment:
     - FLASK_APP=app.py
+    - FLASK_DEBUG=1
   command: flask run --host=0.0.0.0
   ports:
     - "5000:5000"
+  volumes:
+    - .:/opt/local/billtracker-flask
 
